# irisdemo-demo-opcua

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  build.sh  bumpversion.sh  docker-compose.yml  generate_certificates.sh  run.sh
Windows/: README.md
Windows/Studio/: IrisOPCUA_prj-20210513.xml
certgen/: certgen.bash  myCA.config  secsvr.config  secuac.config
hooks/: build  push
image-iris/: Dockerfile
image-iris/src/Examples/OPCUA/: SecureBrowse.cls  SecureWrite.cls  SimpleBrowse.cls  SimpleWrite.cls
image-iris/src/Examples/OPCUADS/: ArrayExample.cls  InternetPollingExample.cls  InternetSubscriptionExample.cls  PollingExample.cls  Production.cls  SecureExample.cls  SubscriptionExample.cls  Utils.cls
image-iris/src/IRISConfig/: Installer.cls
image-iris/src/OPCUA/: Client.cls  Constants.inc  DateTimeUtils.cls  Utils.cls
image-iris/src/OPCUA/Adapter/: Common.cls  TCPPollingInboundAdapter.cls  TCPSubscriptionInboundAdapter.cls
image-iris/src/OPCUA/DataSource/: Definition.cls  Projection.cls  PropertyClass.cls
image-iris/src/OPCUA/Service/: TCPPollingService.cls
image-iris/uacbin/: libcrypto.so.1.1  libmbedcrypto.so.3  libopen62541.so.0  libopen62541.so.1
image-opcua-certified-server/: Dockerfile
image-opcua-certified-server/scripts/: run.bash
image-opcua-certified-server/src/: CMakeLists.txt  common.h  open62541.h  server_ctt.c
mocksvr-data/: data.csv
src/Examples/OPCUADS/: Production.cls
src/OPCUA/: Client.cls
src/OPCUA/Service/: TCPSubscriptionService.cls
uacbin/: libopen62541.so.0.0.0
windows/: README.md
(+25 files in other folders)
